Fixed thumbnail profile pic so it stops stretching / squasing image

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -76,6 +76,7 @@ main {
 
 /* Images */
 .image-thumbnail {
+    object-fit: cover;
     width: 50px;
     height: 50px;
 }
